--- a/src/components/MainScroll/MainScroll.css
+++ b/src/components/MainScroll/MainScroll.css
@@ -77,6 +77,18 @@
   height: 100%;
 }
 
+.elementContact {
+  height: 100%;
+}
+
+@media (max-width: 768px) {
+  .elementContact {
+    height: 100%;
+  }
+}
+
+
+
 @media (max-width: 768px) {
   .elementPhotoJournal {
 
@@ -87,9 +99,9 @@
   .element {
     display: flex;
     flex-direction: row;
-    height: 100%;
+    /* height: 100%; */
     /* width: 100%; */
-    /* overflow-x: auto; */
+    overflow-x: auto;
   }
 }
 
